--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,10 +65,10 @@ mark_as_advanced(FLAG_WARNINGS)
 
 # Jarvis_process_options()
 
-if( UNIX AND NOT APPLE )
-    pbuilder_add_ext_libraries (rt)
-    set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,--no-as-needed")
-endif( UNIX AND NOT APPLE )
+#if( UNIX AND NOT APPLE )
+#    pbuilder_add_ext_libraries (rt)
+#    set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,--no-as-needed")
+#endif( UNIX AND NOT APPLE )
 
 set (CMAKE_CXX_FLAGS_STANDARD "${CMAKE_CXX_FLAGS_STANDARD} -Winconsistent-missing-override ")
 
